2002-08-01  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (occurs_clause): Use predefined_name for DEPENDING ON.
	(record_depending): Set `record_depending' directly.

2002-07-31  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.h (cobc_program_spec): Renamed from `program_spec'.
	* parser.y (program_spec): Updated.
	* codegen.c: (output_switch): New variable.
	(output, output_newline, output_prefix, output_line): Updated.
	(loop_counter, loop_counter_max): New variables.
	(codegen_1): Renamed from codegen.  Set counter variables.
	(codegen): New function.
	(output_perform): Use loop_counter.

2002-07-31  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (codegen): Return cob_return_code from main.

2002-07-30  Keisuke Nishida  <knishida@netlab.jp>

	* tree.c, tree.h (make_perform_once): New function.

2002-07-26  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y: Accept SD clause.

2002-07-26  Keisuke Nishida  <knishida@netlab.jp>

	* tree.c (make_word): Take constant and duplicate the name.

2002-07-22  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (FUNCTION_NAME): Defined as the string type.
	* scanner.l (FUNCTION_STATE): Set value for FUNCTION_NAME.

2002-07-22  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (display_with_no_advancing): Fixed port number.

2002-07-08  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_field): Support literals.
	(output_file_name): Output ASSIGN clause.
	* parser.y (open_list): Call "cob_open" without file name.

2002-07-08  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_field): New function.
	(output_file_name): Use it.

2002-07-05  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (screen_description): Set default line/column.
	* codegen.c (output_screen_definition): Updated.
	Handle COB_SCREEN_TYPE_ATTRIBUTE.

2002-07-04  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_file_name): Rename `cob_file_desc' to `cob_file'.

2002-07-04  Keisuke Nishida  <knishida@netlab.jp>
