@@ -1,5 +1,12 @@
 2002-08-01  Keisuke Nishida  <knishida@netlab.jp>
 
+	* tree.h (cobc_key): Define `dir' as int.
+	Use COB_ASCENDING or COB_DESCENDING for this.
+	* inline.c (output_search_all): Updated.
+	* parser.y (ascending_or_descending): Updated.
+
+2002-08-01  Keisuke Nishida  <knishida@netlab.jp>
+
 	* parser.y (occurs_clause): Use predefined_name for DEPENDING ON.
 	(record_depending): Set `record_depending' directly.
 
